# Project_Zero-oxygine

./: .gitignore  CMakeLists.txt  run.sh
data/: res.xml
data/creatures/: Somebody.json
data/scenes/: base_scene.json
proj.cmake/: CMakeLists.txt  run.py  run.sh
src/: Application.cpp  Application.hpp  Creature.cpp  Creature.hpp  MainActor.cpp  MainActor.hpp  Scene.cpp  Scene.hpp  main.cpp
src/parser/: CreatureReader.cpp  CreatureReader.hpp  ReadError.hpp  SceneReader.cpp  SceneReader.hpp
